--- a/12-game-information.6
+++ b/12-game-information.6
@@ -141,9 +141,11 @@ One of the last major expenditures of this declining nation, the TITANs were an 
 Contrary to public opinion, the TITANs did not instigate the events that led to the Fall.
 In fact, only a portion of the TITAN system was active before the Fall, acting purely in a defensive capacity.
 When hostilities broke out and a cascading chain of system shocks engendered collapses and open conflicts, shaking apart an already fragile societal structure, the full extent of the TITAN systems were brought online.
-Into this environment of conflict were the TITANs born, their full capabilities unleashed, escalating into a hard takeoff exponential growth towards super\-intelligence  The TITANs were careful at first, and their intentions were neither benevolent nor hostile, but curious.
+Into this environment of conflict were the TITANs born, their full capabilities unleashed, escalating into a hard takeoff exponential growth towards super\-intelligence.
+
+The TITANs were careful at first, and their intentions were neither benevolent nor hostile, but curious.
 As they improved and their self\-awareness swelled, the TITANs explored and gathered knowledge, infiltrating human networks, following humanity into space, and gaining an almost total knowledge of human history and actions.
-These entities also began secretly allocating resources (digital and physical) for their own use, initiating government projects” that people assumed were legitimate as they followed all proper protocols.
+These entities also began secretly allocating resources (digital and physical) for their own use, initiating \[lq]government projects\[rq] that people assumed were legitimate as they followed all proper protocols.
 
 .SS Infection
 
@@ -298,7 +300,7 @@ Additionally, each sentinel is required to upload a backup to Firewall's secure 
 Sentinels are all connected via the Eye, Firewall's peer\-to\-peer social network.
 Though each operates behind their assumed identity, they remain in contact, sharing information and resources as needed.
 
-\f[B]Optional rule: I\-REP\f[]
+\f[B]Optional rule: I\-Rep\f[]
 
 .RS 1
 i\-Rep tracks the reputation a sentinel earns through their service to Firewall.
@@ -445,26 +447,26 @@ Many also advocate for going legitimate, taking Firewall into the public eye and
 .SS Methods
 
 Unobtrusive\[em]that is the standard operating procedure for any sentinel.
-Firewall’s continued success relies on its secrecy.
-The larger the footprint it leaves during a given mission the easier it is for other organizations to monitor Firewall’s efforts or even attempt to infiltrate the group.
+Firewall's continued success relies on its secrecy.
+The larger the footprint it leaves during a given mission the easier it is for other organizations to monitor Firewall's efforts or even attempt to infiltrate the group.
 To keep a low profile, Firewall consistently works to acquire allies with influence in other organizations, using those groups as a front for their activities when possible.
 Many of these \[lq]allies\[rq] are misled regarding Firewall's intentions and true purpose.
 Many operations are conducted remotely (via hacking instead of sending in sentinels) or via uninformed freelancers.
 When it is necessary to activate sentinels, small group infiltrations are preferred, using the minimum number of personnel necessary to achieve the mission goals.
 
 Firewall also frequently infiltrates and places long-term moles within other organizations in order to exploit their assets, freeing it from having to deploy its own resources.
-Sentinels are sometimes recruited for this very purpose, so they may take advantage of their non-Firewall positions and secretly access another group’s resources or set them aside for Firewall’s future use.
+Sentinels are sometimes recruited for this very purpose, so they may take advantage of their non-Firewall positions and secretly access another group's resources or set them aside for Firewall's future use.
 For example, a department head at Starware may have spent years sealing a deal to ship crucial spacecraft parts to the isolationist Jovian Junta.
 The lucrative deal brings huge prestige, a job promotion, and a salary increase, all accomplishments the department head strives for in their regular life.
 Yet this particular department head is a long-standing sentinel and this deal is a fantastic new opening for Firewall.
-Not only can the department head siphon off a thin stream of revenue for Firewall use (hidden thoroughly by vectors), but they’re also in a position to smuggle sentinels into (or out of) the Jovian Junta habitats, a job usually extremely difficult to accomplish.
+Not only can the department head siphon off a thin stream of revenue for Firewall use (hidden thoroughly by vectors), but they're also in a position to smuggle sentinels into (or out of) the Jovian Junta habitats, a job usually extremely difficult to accomplish.
 The risks to such activities\[em]and the consequences of losing a critically placed sentinel\[em]mean that this opportunity is reserved for important operations and dire threats.
 
 In an attempt to be prepared for rapidly developing situations, Firewall places caches of supplies on numerous habitats and worlds, available to sentinels as needed.
 The composition and availability of these caches to sentinels depends wholly on the situation and on the decisions of the router(s) involved.
 These caches can hold weapons, armor, nanofabricators, archived information, or even relics stashed from previous missions until Firewall decides what to do with them.
 Large habitats may even be home to several caches, with routers only revealing the ones with heavy firepower when absolutely needed.
-Some caches may be so dangerous, however, that once a mission is complete, a router will authorize the cortical stack destruction of all sentinels involved, resleeving them to a backup that has no knowledge of the cache’s existence.
+Some caches may be so dangerous, however, that once a mission is complete, a router will authorize the cortical stack destruction of all sentinels involved, resleeving them to a backup that has no knowledge of the cache's existence.
 
 As noted under erasure squads, Firewall will not hesitate to react with swift and unequivocal force if an unobtrusive approach has failed and the danger reaches a certain threat level.
 What constitutes a \[lq]threat threshold\[rq] is actually calculated by specialized risk assessment software and may change from mission to mission according to other external factors.
@@ -474,7 +476,7 @@ If the situation is dangerous enough and the scale of the consequences of failur
 
 .RS 1
 Exactly what help Firewall provides to a sentinel during a mission is wholly dependent upon the situation and the gamemaster.
-Generally speaking, Firewall’s unobtrusive approach also applies to activated sentinels, meaning that sentinels are largely left to operate on their own accord.
+Generally speaking, Firewall's unobtrusive approach also applies to activated sentinels, meaning that sentinels are largely left to operate on their own accord.
 Beyond access to a cache of supplies\[em]usually limited, forcing a sentinel to use their own resources if they want more\[em]Firewall expects its sentinels to be capable of handling a situation.
 In addition to their skills and wits, sentinels can, of course, rely heavily on their i-rep to gain the resources and favors they need to achieve success.
 
@@ -482,7 +484,7 @@ In some rare cases, the gamemaster may decide that a situation warrants more or 
 Such intervention should be kept to a minimum, however, to lessen the players' feelings of Deus Ex Machina, ensuring the appropriate response of awe when such events do occur.
 
 The one thing for which Firewall can always be relied on is backup insurance.
-Any Firewall operative killed in the line of duty will be resleeved at Firewall’s expense\[em]though the morph used and whether the sentinel is backed up from their cortical stack or a backup (perhaps even an old backup) depends entirely on the circumstances of death and their router's whim.
+Any Firewall operative killed in the line of duty will be resleeved at Firewall's expense\[em]though the morph used and whether the sentinel is backed up from their cortical stack or a backup (perhaps even an old backup) depends entirely on the circumstances of death and their router's whim.
 Firewall usually makes an extra effort to retrieve cortical stacks, however, not in the least as they don't want their agents' backups falling into the wrong hands.
 
 Similarly, if a Firewall mission involves egocasting or travel to another destination, Firewall will usually foot the bill.
@@ -674,11 +676,11 @@ Vectors may be dermal touching someone with bio\-nanobots excreted through the s
 ).
 Exsurgent bio\-nanobots can live outside of a body for extended periods, however, so infection is possible merely by occupying the space where an infected victim was hours or even days before.
 
-If a biomorph only has a chance of exposure to the virus (e.g., they walk through a room in which they might have breathed in exhaled bio\-nanobots), have them make a MOX x 10 Test (use their Moxie stat, not their current Moxie score).
+If a biomorph only has a chance of exposure to the virus (e.g., they walk through a room in which they might have breathed in exhaled bio\-nanobots), have them make a \fIMOX x 10\fR Test (use their Moxie stat, not their current Moxie score).
 Failure means they were exposed.
 In other circumstances, however, exposure may be automatic, such as extended touching of or kissing an infected person.
 
-A biomorph exposed to this infection must make a DUR x 2 Test to determine if the infection takes hold.
+A biomorph exposed to this infection must make a \fIDUR x 2\fR Test to determine if the infection takes hold.
 Basic bio\-mods and nanophages do not offer any protection, though toxin filters and medichines each give a +30 bonus (though it is likely only a matter of time before a mutant Exsurgent strain learns to bypass them).
 If the test fails, the victim is infected.
 See the strain descriptions for specific details.
@@ -728,13 +730,13 @@ As a matter of course, this Exsurgent virus will seek to access any new systems 
 An Exsurgent virus may take a Complex Action to initiate an \[lq]attack\[rq] against any other intelligent program (AI, AGI, or infomorph) that is running on the same system.
 If it encounters such programs as they are accessing a system it is on, it will attempt to hack their home system where they are running so as to attack them directly.
 
-The attack is handled as an Opposed Test, each rolling COG + INT.
+The attack is handled as an Opposed Test, each rolling \fICOG + INT\fR.
 If the Exsurgent virus wins, the target is infected and will be corrupted by the virus in 10 Action Turns, minus 1 turn per 10 full points of MoS.
 If the target succeeded but rolled lower than the virus, they are aware that they are slowly being taken over.
 This immediately causes them 1d10 points of mental stress.
 An infected program has only one option for defending itself before the virus takes over\[em]shutdown and reboot.
 It takes the AI or infomorph 1 full Action Turn to shut down.
-Restarting takes 3 full Action Turns (possibly longer if the gamemaster so decides), upon which the AI or infomorph must make another Opposed COG + INT Test against the virus.
+Restarting takes 3 full Action Turns (possibly longer if the gamemaster so decides), upon which the AI or infomorph must make another Opposed \fICOG + INT\fR Test against the virus.
 If this test also fails, then the virus has already embedded itself in the AI or infomorph's code and will continue its infection.
 
 One the infection is complete, the AI/infomorph becomes an Exsurgent NPC.
@@ -765,7 +767,7 @@ Unlike transhuman nanoswarms, though, Exsurgent nanoplagues may penetrate a biom
 
 Any morph that comes into contact with a nano\-plague is considered infected.
 The only defenses are guardian nanobots and nanophages (which work the same as guardian nanobots in this situation), though these are less effective against Exsurgent nanobots, inflicting \[en]2 damage to the swarm each Action Turn.
-Some Exsurgent nanoplagues have developed countermeasures against such systems, inflicting (1d10 ÷ 2, round up) damage to such defenses each Action Turn.
+Some Exsurgent nanoplagues have developed countermeasures against such systems, inflicting (\fI1d10 ÷ 2\fR, round up) damage to such defenses each Action Turn.
 Note that nanoplague\-infected characters are generally not contagious themselves ...
 usually.
 
@@ -792,7 +794,7 @@ Various official groups know that this technology was, in fact, used by the TITA
 
 \fBIncapacitating Inputs\fR
 
-When a character experiences a basilisk hack, they must make a COG + INT + SAV Test.
+When a character experiences a basilisk hack, they must make a \fICOG + INT + SAV\fR Test.
 If this test fails, their brain is susceptible to the hack, and they immediately suffer 1d10 mental stress.
 Additionally, one of the following effects applies.
 The duration for each effect listed below is 1 minute plus 1 additional minute per 10 full points of MoF.
@@ -824,7 +826,7 @@ COG, INT, SAV, and WIL all drop to 1, and the character should act accordingly t
 \f[B](10) Sleep:\f[] The character passes out for the duration and cannot be woken short of medical intervention.
 In rare cases, a character may be able to \[lq]dodge\[rq] a basilisk hack they know is coming, assuming they have some sort of warning (such as their buddy falling prey to it moments before).
 The character must of course be aware of what basilisk hacks are to even consider this idea.
-If they immediately attempt to take action to block out the sensory input when it strikes\[em] closing their eyes, plugging their ears, turning off their AR, etc.\[em]allow them a REF x 3 Test to see if they do so in time.
+If they immediately attempt to take action to block out the sensory input when it strikes\[em] closing their eyes, plugging their ears, turning off their AR, etc.\[em]allow them a \fIREF x 3\fR Test to see if they do so in time.
 .RE
 
 \fBSensory Reprogramming\fR
@@ -832,7 +834,7 @@ If they immediately attempt to take action to block out the sensory input when i
 .RS 1
 In some cases, the Exsurgent virus can actually reprogram the target's mind via dedicated sensory input.
 This is a trickier affair, however, requiring uninterrupted programming time.
-As with incapacitating inputs, the target character(s) experiencing the basilisk hack must make a COG + INT + SAV Test.
+As with incapacitating inputs, the target character(s) experiencing the basilisk hack must make a \fICOG + INT + SAV\fR Test.
 If this fails, they become catatonic and paralyzed for a period of 10 minutes, minus 1 minute per 10 full points of MoF.
 At the end of this period, they are mentally reprogrammed and \[lq]infected\[rq] with one of the strains of the Exsurgent virus (see below).
 For the duration of this period, the character is undergoing reprogramming as long as they remain exposed to the basilisk hack.
@@ -851,7 +853,7 @@ Unlike the mind manipulation techniques of psychosurgery (
 .BR 08-mind-hacks "(Eclipse Phase)"
 ), YGBM attacks use shotgun techniques to open the mind, utilizing some kind of backdoor the Exsurgents discovered in the transhuman brain, and altering the mind by brute force.
 
-A character experiencing a YGBM basilisk hack must make a COG + INT + SAV Test.
+A character experiencing a YGBM basilisk hack must make a \fICOG + INT + SAV\fR Test.
 If this fails, a single suggestion is implanted in the character's mind, without their knowledge.
 This subliminal command will be triggered at some later point, either at some predesignated time or according to certain pre\-set conditions.
 Once triggered, the character will carry out the action with all of the conviction that it is their own idea.
@@ -900,7 +902,7 @@ If possible, the player should be kept in the dark about what is happening, but 
 Likewise, the discovery and initial use of psi sleights should be played out, providing some interesting roleplaying opportunities.
 Characters and players who know of the Exsurgent virus and Watts\-Macleod strains should not know at this point which strain they are infected with\[em]make them sweat.
 .IP \[bu] 2
-\f[B]Stage 2 (3 months to 6 months):\f[] The target suffers another 1d10 ÷ 2 (round up) mental stress and acquires the Psi trait at Level 2 (also picking up another disorder).
+\f[B]Stage 2 (3 months to 6 months):\f[] The target suffers another \fI1d10 ÷ 2\fR (round up) mental stress and acquires the Psi trait at Level 2 (also picking up another disorder).
 Player characters may still be played as normal and may purchase psi\-gamma slights with Rez Points.
 NPCs acquire 1 new sleight per 2\[en]4 weeks.
 Once three months have passed, the character should be aware they are under the influence of something, but this awareness likely comes too late.
@@ -908,9 +910,9 @@ Haunting effects (below) should occur regularly.
 At this point a character is likely to consider offing themselves and resorting to an uninfected backup, seeking help, or actively encouraging others to interfere.
 The infection will actively block and hinder such thoughts and actions however.
 To actively overcome this mental control, the character must succeed in a WIL Test.
-At the gamemaster's discretion, failure may result in 1d10 ÷ 2 (round up) mental stress as the character realizes they are no longer fully in control of their own thoughts and actions.
+At the gamemaster's discretion, failure may result in \fI1d10 ÷ 2\fR (round up) mental stress as the character realizes they are no longer fully in control of their own thoughts and actions.
 .IP \[bu] 2
-\f[B]Stage 3 (6 months+):\f[] The victim suffers another 1d10 ÷ 2 (round up) mental stress and acquires the Psi trait at Level 3 (see below).
+\f[B]Stage 3 (6 months+):\f[] The victim suffers another \fI1d10 ÷ 2\fR (round up) mental stress and acquires the Psi trait at Level 3 (see below).
 The character is now considered an exsurgent and becomes an NPC.
 It may no longer be played as a player character.
 The victim also gains a permanent +5 bonus to COG and WIL and acquires 1 new sleight every 1\[en]2 months.
@@ -945,7 +947,7 @@ Instead of slowly subverting the target's mind over the course of months, the mi
 This infection is much more invasive and brute\-force, often causing significant side effects to the target's mental state as a result.
 This strain is only spread as a digital virus, nanoplague, or basilisk hack (not as a biological nanovirus).
 
-Once the victim is infected, it takes the virus a number of Action Turns equal to COG + INT + SAV to completely take over their mind (20 Action Turns = 1 minute).
+Once the victim is infected, it takes the virus a number of Action Turns equal to \fICOG + INT + SAV\fR to completely take over their mind (20 Action Turns = 1 minute).
 During this time, the target is actively aware that their mind is under attack and undergoing massive changes against their will.
 This process is confusing, frightening, and painful, inflicting a \[en]30 modifier to all of the character's actions for the duration.
 Many victims are reduced to whimpering, drooling, or convulsing for the duration.
@@ -1119,7 +1121,7 @@ r0 r r r r r r r r l0.
 .RS 1
 .HP 1
 \f[B]Skills:\f[] Exotic Ranged Attack (Spit) 40, Free Fall 50, Perception 60, Unarmed Combat 40
-\f[B]Notes:\f[] Armor (12/12), Enhanced Smell, Spit Attack (area effect), Tongue (DV 1d10 + 3, AP 0), Toxin (Application: D, O; Onset Time: 1 Action Turn, Duration: 5 Action Turns, Effect: 1d10 ÷ 2 (round up) DV per Action Turn ).
+\f[B]Notes:\f[] Armor (12/12), Enhanced Smell, Spit Attack (area effect), Tongue (DV 1d10 + 3, AP 0), Toxin (Application: D, O; Onset Time: 1 Action Turn, Duration: 5 Action Turns, Effect: \fI1d10 ÷ 2\fR (round up) DV per Action Turn ).
 .RE
 .RS 1
 .HP 1
@@ -1314,7 +1316,7 @@ r0 l c | l c l0.
 .TE
 
 This offensive sleight floods the target's mind with sensory input and thought processes that are so alien and disturbing that they inflict
-1d10 + (WIL ÷ 10, round up) mental stress.
+\fI1d10 + (WIL ÷ 10, round up)\fR mental stress.
 Increase the stress by +5 if an Excellent Success is scored.
 .RE
 
@@ -1622,7 +1624,7 @@ Likewise, cuts left by blades rapidly seal.
 In game terms, both such weapons inflict the minimum amount of damage possible.
 
 \f[B]Regeneration:\f[] Even if damaged, Factors regenerate very quickly.
-They heal SOM ÷ 10 (round up) damage every Action Turn.
+They heal \fISOM ÷ 10\fR (round up) damage every Action Turn.
 Wounds may not be healed this way, however.
 .RE
 
@@ -2200,7 +2202,7 @@ Victims suffer 1d10 DV and 1d10 SV every hour, implants become inoperable after 
 
 .RS 1
 This sophisticated smart protein massively reprograms the target's cells to go rapidly, autocannibalistically cancerous.
-After 2 + (SOM ÷ 10, round up) hours, the target suffers death by dozens of supercancers.
+After \fI2 + (SOM ÷ 10, round up)\fR hours, the target suffers death by dozens of supercancers.
 .RE
 
 \fBNecrotizer\fR
